--- a/PYP.Domain/PYP.Domain.csproj
+++ b/PYP.Domain/PYP.Domain.csproj
@@ -52,6 +52,8 @@
     <Compile Include="Entities\Affiliate.cs" />
     <Compile Include="Entities\Core\EntitiesContext.cs" />
     <Compile Include="Entities\Core\IEntity.cs" />
+    <Compile Include="Entities\Core\IEntityRepository.cs" />
+    <Compile Include="Entities\Core\PaginatedList.cs" />
     <Compile Include="Entities\Role.cs" />
     <Compile Include="Entities\Shipment.cs" />
     <Compile Include="Entities\ShipmentState.cs" />
