--- a/PYP.Domain/PYP.Domain.csproj
+++ b/PYP.Domain/PYP.Domain.csproj
@@ -51,9 +51,13 @@
   <ItemGroup>
     <Compile Include="Entities\Affiliate.cs" />
     <Compile Include="Entities\Core\EntitiesContext.cs" />
+    <Compile Include="Entities\Core\EntityRepository.cs" />
     <Compile Include="Entities\Core\IEntity.cs" />
     <Compile Include="Entities\Core\IEntityRepository.cs" />
     <Compile Include="Entities\Core\PaginatedList.cs" />
+    <Compile Include="Entities\Extensions\IQueryableExtensions.cs" />
+    <Compile Include="Entities\Extensions\RoleRepositoryExtensions.cs" />
+    <Compile Include="Entities\Extensions\UserRepositoryExtensions.cs" />
     <Compile Include="Entities\Role.cs" />
     <Compile Include="Entities\Shipment.cs" />
     <Compile Include="Entities\ShipmentState.cs" />
@@ -74,6 +78,8 @@
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\CryptoService.cs" />
+    <Compile Include="Services\ICryptoService.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -90,6 +96,7 @@
       <DependentUpon>201608101504463_shipmentstate.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
