--- a/PYP.Domain/PYP.Domain.csproj
+++ b/PYP.Domain/PYP.Domain.csproj
@@ -80,6 +80,11 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\CryptoService.cs" />
     <Compile Include="Services\ICryptoService.cs" />
+    <Compile Include="Services\IMembershipService.cs" />
+    <Compile Include="Services\OperationResult.cs" />
+    <Compile Include="Services\OperationResultOfTEntity.cs" />
+    <Compile Include="Services\UserWithRoles.cs" />
+    <Compile Include="Services\ValidUserContext.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
