--- a/PYP.Domain/PYP.Domain.csproj
+++ b/PYP.Domain/PYP.Domain.csproj
@@ -81,6 +81,7 @@
     <Compile Include="Services\CryptoService.cs" />
     <Compile Include="Services\ICryptoService.cs" />
     <Compile Include="Services\IMembershipService.cs" />
+    <Compile Include="Services\MembershipService.cs" />
     <Compile Include="Services\OperationResult.cs" />
     <Compile Include="Services\OperationResultOfTEntity.cs" />
     <Compile Include="Services\UserWithRoles.cs" />
