--- a/PYP.API/packages.config
+++ b/PYP.API/packages.config
@@ -2,9 +2,8 @@
 <packages>
   <package id="Autofac" version="3.1.0" targetFramework="net461" />
   <package id="Autofac.WebApi" version="3.1.0" targetFramework="net461" />
-  <package id="Microsoft.AspNet.WebApi" version="5.2.3" targetFramework="net461" />
+  <package id="EntityFramework" version="6.1.3" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net461" />
-  <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.3" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net461" />
 </packages>
